Fixing sonar reported issues